kubernetes/talos/deploy/monitoring/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: prometheus
      release: prometheus
  template:
    metadata:
      labels:
        app: prometheus
        release: prometheus
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30

      # --- Security ---
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      # ---------------
      
      containers:
        # --- General ---
      - image: prom/prometheus:v3
        imagePullPolicy: Always
        name: prometheus
        # ---------------
      
        # --- Network ---
        ports:
        - containerPort: 9090
          name: http
          protocol: TCP
        # ---------------

        # --- Mounts ---
        volumeMounts:
        - mountPath: /prometheus
          name: prometheus-data
        # ---------------
      volumes:
      - name: prometheus-data
        persistentVolumeClaim:
          claimName: prometheus-data
