kubernetes/talos/deploy/monitoring/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  ports:
  - name: http
    targetPort: 9090
    port: 9090
  selector:
    app: prometheus
  type: ClusterIP
